--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Enigma</string>
-    <string name="title_activity_main">MainActivity</string>
-    <string name="title_activity_test">test</string>
     <string name="sendButtonText">SEND</string>
     <string name="messageInputHint">Message</string>
+    <string name="authID">818661263256-jqjt3lq253apuqlams7ds6807sq28kl2.apps.googleusercontent.com</string>
 </resources>
