--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="log_in_button_text">Log in</string>
     <string name="login_password_hint">Password</string>
     <string name="sign_up_button_text">Sign up</string>
+    <string name="signup_finish_button_text">Create Account</string>
+    <string name="username_input_hint">Username</string>
 </resources>
