--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="sign_up_button_text">Sign up</string>
     <string name="signup_finish_button_text">Create Account</string>
     <string name="username_input_hint">Username</string>
+    <string name="enigma_logo_description">Enigma Logo</string>
 </resources>
